--- a/EssentialFeedTests/Feed Presentation/el.lproj/Feed.strings
+++ b/EssentialFeedTests/Feed Presentation/el.lproj/Feed.strings
@@ -1,7 +1,9 @@
 /* 
   Feed.strings
   EssentialFeed
-*/
 
+  Created by Saranya Ravi on 24/01/2024.
+  
+*/
 "FEED_VIEW_TITLE" = "Το Feed μου";
 "FEED_VIEW_CONNECTION_ERROR" = "Δεν ήταν δυνατή η σύνδεση στο διακομιστή";
