--- a/EssentialFeediOS/Feed UI/Feed Presentation/en.lproj/Feed.strings
+++ b/EssentialFeediOS/Feed UI/Feed Presentation/en.lproj/Feed.strings
@@ -3,4 +3,6 @@
   EssentialFeed
 */
 
-"FEED_VIEW_TITLE" = "My Feed";
+"FEED_VIEW_TITLE" = "Meu Feed";
+"FEED_VIEW_CONNECTION_ERROR" = "Não foi possível conectar com o servidor";
+
